[package]
name = "cluster_estimator"
version = "0.1.0"
authors = ["igorshalimov"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "cluster_estimator"
crate-type = ["cdylib"]

[dependencies]
numpy = "0.9.0"
ndarray = "0.13"

[dependencies.pyo3]
version = "0.10.1"
features = ["extension-module"]
